# imdb_sentiment_analysis_mlops

./: .ebignore  .gitignore  .pre-commit-config.yaml  .prefectignore  Dockerfile  LICENSE  README.md  evaluate_model.py  prefect.yaml  pyproject.toml  train_flow.py
.dvc/: config
.elasticbeanstalk/: config.yml
.github/workflows/: deploy.yml  run_tests.yml
.prefect/: flows.json
data/: .gitignore  test.csv.dvc  train.csv.dvc  valid.csv.dvc
imdb_sentiment/: __init__.py  predict.py  review.py  utils.py
imdb_sentiment/app/: predict.py
imdb_sentiment/config/: __init__.py  params.py  review.py  settings.py
imdb_sentiment/flows/: create_s3_block.py  evaluate_model.py  monitor_model.py  train_flow.py
imdb_sentiment/steps/: __init__.py  make_model.py  optimizer.py  train.py  transform.py
infra/terraform/: main.tf  outputs.tf  secrets.tfvars  variables.tf
infra/terraform/modules/elastic_beanstalk/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/mlflow/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3_buckets/: main.tf  variables.tf
ml_projects/config/: params.py  settings.py
ml_projects/mlflow/: mlflow.py
ml_projects/model/: load_data.py  model.py  train.py
ml_projects/steps/: load_data.py  make_model.py  optimizer.py  train.py  transform_data.py
ml_projects/student_performance_predictor/: model.py
model/: model.pkl.dvc
tests/: test_model_performance.py  test_transform_data.py
