[tool.poetry]
name = "imdb_sentiment"
version = "0.1.0"
description = ""
authors = ["Shun-Lung Chang<shunlung.chang@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ml_projects"}]

[tool.poetry.dependencies]
python = "~3.9"
torch = "2.0.1"
pytorch-lightning = "1.4.4"
torchmetrics = "0.5"
mlflow = "^2.3.1"
optuna = "^3.2.0"
boto3 = "^1.28.11"
pydantic-settings = "^2.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.24.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
