[tool.poetry]
name = "imdb_sentiment"
version = "0.1.0"
description = ""
authors = ["Shun-Lung Chang <shunlung.chang@gmail.com>"]
license = "MIT"
packages = [{include = "imdb_sentiment"}]

[tool.poetry.dependencies]
python = "~3.9"
mlflow = "^2.3.1"
optuna = "^3.2.0"
boto3 = "^1.28.11"
pydantic-settings = "^2.0.2"
gitpython = "^3.1.32"
fastapi = "^0.100.1"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pre-commit = "^3.3.3"
ruff = "^0.0.280"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
