[tool.poetry]
name = "imdb_sentiment"
version = "0.1.0"
description = ""
authors = ["Shun-Lung Chang <shunlung.chang@gmail.com>"]
license = "MIT"
packages = [{include = "imdb_sentiment"}]

[tool.poetry.dependencies]
python = "~3.9"
mlflow = "^2.3.1"
optuna = "^3.2.0"
gitpython = "^3.1.32"
typer = "^0.9.0"
dvc = {extras = ["s3"], version = "^3.15.3"}
prefect-aws = "^0.3.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pre-commit = "^3.3.3"
ruff = "^0.0.280"


[tool.poetry.group.app.dependencies]
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
scikit-learn = "1.2.2"
pydantic = {version = ">=1.9 <2.0.0", extras = ["dotenv"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
